Changed order of pictures

--- a/index.html
+++ b/index.html
@@ -159,18 +159,18 @@
       <h2>🥊 My favourite sport 🥊</h2>
       <a href="https://en.wikipedia.org/wiki/Kickboxing" target="_blank">
         <img
-          src="https://images.unsplash.com/photo-1584464491033-06628f3a6b7b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8a2lja2JveGluZ3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1000&q=60"
+          src="https://images.unsplash.com/photo-1486215397028-cb4f31efea3e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8a2lja2JveGluZ3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1000&q=60"
           alt="Woman boxing"
           class="image1"
         />
       </a>
       <div class="image-gallery">
         <img
-          src="https://images.unsplash.com/photo-1520529301226-42abc4cd766b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8JTIza2lja2JveGluZyUyMHdvbWFufGVufDB8MHwwfHw%3D&auto=format&fit=crop&w=1000&q=60"
+          src="https://images.unsplash.com/photo-1584464491033-06628f3a6b7b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8a2lja2JveGluZ3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1000&q=60"
           alt="Man kickboxing"
         />
         <img
-          src="https://images.unsplash.com/photo-1486215397028-cb4f31efea3e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8a2lja2JveGluZ3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1000&q=60"
+          src="https://images.unsplash.com/photo-1520529301226-42abc4cd766b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8JTIza2lja2JveGluZyUyMHdvbWFufGVufDB8MHwwfHw%3D&auto=format&fit=crop&w=1000&q=60"
           alt="Two men in the ring"
         />
         <img
@@ -189,7 +189,7 @@
       </a>
     </div>
     <button id="theme-button">Change theme</button>
-    <div class="footer">Coded by Chiara Pelosi</div>
+    <div class="footer">Coded by Tom van Lint</div>
 
     <script>
       function changeTheme() {
